Add LICENSE from SGDX repo

--- a/package.json
+++ b/package.json
@@ -12,5 +12,5 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Milo Mordaunt <milomord@gmail.com>",
-    "license": "MIT"
+    "license": "Custom"
 }
