--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "giant-bomber",
+    "name": "bombermin",
     "version": "0.1.0",
     "description": "Giantbomb Roku app (unofficial)",
     "main": "index.js",
