--- a/src/main/constants.yaml
+++ b/src/main/constants.yaml
@@ -3,3 +3,7 @@ source: 'pkg:/source'
 images:
   top_image: 'pkg:/images/bar_image.png'
 background_color: "#262626"
+
+9_tight_focus_uri: 'pkg:/images/tight_focus.9.png'
+9_button_focus_uri: 'pkg:/images/button_focus.9.png'
+9_seperator: 'pkg:/images/seperator.9.png'
