--- a/src/main/constants.yaml
+++ b/src/main/constants.yaml
@@ -6,6 +6,7 @@ fonts:
   press_start: 'pkg:/fonts/PressStart2P-Regular.ttf'
 
 9_tight_focus_uri: 'pkg:/images/tight_focus.9.png'
+9_tight_focus_solid_uri: 'pkg:/images/tight_focus_solid.9.png'
 9_button_focus_uri: 'pkg:/images/button_focus.9.png'
 9_seperator: 'pkg:/images/seperator.9.png'
 9_poster_focus_uri: 'pkg:/images/poster_focus.9.png'
